--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,7 +43,7 @@ html, body{
     display: grid;
     grid-template-columns: 10% 90%;
     white-space: nowrap;
-    height: 94vh;
+    height: 100vh;
     width: 100vw;
 
     *{
@@ -59,7 +59,7 @@ html, body{
         text-align: left;
         @include shadow;
         border-radius: 0em;
-        overflow-y: scroll;
+        align-content: flex-end;
         
         
         .categoria{
@@ -272,7 +272,7 @@ html, body{
                     .button-vacaciones{
                         @include button;
                         @include margins;
-                        background-color: cadetblue;
+                        background-color: #333333;
                     }
 
                     .button-cancelar{
